--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- meta tags for SEO -->
+    <meta
+      name="description"
+      content="Generate and scan QR codes with ease using QR Bolt."
+    />
+    <meta
+      name="keywords"
+      content="QR Code, QR Scanner, QR Generator, QR
+  Tools"
+    />
     <title>QR Bolt</title>
   </head>
   <body>
